[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/icon.png" type="Texture" id=1]
[ext_resource path="res://Projetil.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 35 )

[node name="Projetil" type="Sprite"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["tiro"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="TempoProjetil" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="TempoProjetil" to="." method="_on_TempoProjetil_timeout"]
